tests/baselines/reference/typeParameterAssignability.errors.txt
==== tests/cases/compiler/typeParameterAssignability.ts (2 errors) ====
    // type parameters are not assignable to one another unless directly or indirectly constrained to one another
    
    function foo<T, U>(t: T, u: U) {
        t = u; // error
        ~
!!! typeParameterAssignability.ts(4,5): error TS2011: Cannot convert 'U' to 'T'.
        u = t; // error
        ~
!!! typeParameterAssignability.ts(5,5): error TS2011: Cannot convert 'T' to 'U'.
    }